# a7ano-api

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  STRUCTURE.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
.devin/: config.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1fc8adf6257e_create_scheduling_table.py  2f9e2581b79c_initial_schema.py  3f73e66ce99d_make_refresh_sessions_token_hash_.py  73d266e9d519_add_direct_messaging_tables.py  7822705338f0_create_tasks_table.py  8991bb29a12a_add_role_read_to_organizme_admin_role.py  b8b4a5b3ada1_create_a_default_super_admin_user_with_.py  bf491961dd88_add_scheduling_permission_to_users.py  efb736949e8b_fix_timestamp_defaults_use_now_function.py
app/: cli.py  models.py
app/audit/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/common/: dependencies.py  models.py  repository.py  responses.py  schemas.py  utils.py
app/core/: __init__.py  application.py  cache.py  config.py  database.py  email.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  router.py  security.py  templates.py
app/dms/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/memos/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/notifications/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/organizations/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/permissions/: constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/projects/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/scheduling/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/tasks/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/teams/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/templates/: base.html  organization_invitation.html  reset_password.html  verify_email.html  welcome.html
app/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/vault/: dependencies.py  encryption.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
scripts/: bootstrap.sh  entrypoint.sh
tests/: conftest.py
tests/app/auth/: test_auth_router.py  test_auth_service.py
tests/app/core/: test_exceptions.py  test_health.py  test_security.py
tests/app/organizations/: test_organizations_service.py
tests/app/permissions/: test_permissions_service.py
tests/app/projects/: test_projects.py
tests/app/scheduling/: test_scheduling.py
tests/app/tasks/: test_tasks.py
tests/app/teams/: test_teams_service.py
tests/app/users/: test_users_service.py
