[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "organization-management-platform"
version = "0.1.0"
description = "Production-ready organization management backend with FastAPI, Clean Architecture, and DDD."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Organization Platform Team" },
]
keywords = ["fastapi", "sqlalchemy", "async", "rbac", "organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0,<0.120.0",
    "uvicorn[standard]>=0.32.0,<0.35.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "psycopg[binary]>=3.2.0,<3.4.0",
    "alembic>=1.14.0,<1.15.0",
    "redis>=5.2.0,<6.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "python-multipart>=0.0.19,<0.1.0",
    "email-validator>=2.2.0,<3.0.0",
    "httpx>=0.28.0,<0.29.0",
    "jinja2>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<0.29.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=33.0.0,<34.0.0",
    "black>=25.1.0,<26.0.0",
    "ruff>=0.15.0,<0.16.0",
    "mypy>=1.15.0,<1.16.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.scripts]
omp = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "S",
]
ignore = [
    "S101",  # assert allowed in tests
    "S311",  # random usage in tests
    "B008",  # FastAPI dependency defaults use Depends(...) in signatures
    "N818",  # exception naming follows domain language, not Error suffix
]

[tool.ruff.lint.per-file-ignores]
"app/cli.py" = ["S104"]
"tests/**/*.py" = ["S105", "S106", "S107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=20",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/cli.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
